[project]
name = "content_creation"
version = "0.1.0"
description = "content-creation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
content_creation = "content_creation.main:run"
run_crew = "content_creation.main:run"
train = "content_creation.main:train"
replay = "content_creation.main:replay"
test = "content_creation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
